# Web4

./: .env  .env.local  .fsharp  .gitignore  .programing.fs  .programing.fsx  BUILD.gn  CNAME  CONTRIBUTING.md  Cmake.ccm  Code.cc  Code.md  Copy of Copy of LMLM Nexus Neural Network  Dockerfile  ExportBlock-a4732125-ffe7-46ec-8dbe-c506e26225c7.c  Falco.sln  Fsharp  Implement web-ai.studio and create webmodel with access to camera phone microphone speech to spee...  Index.html  InfoGenius  LMLM Nexus Neural Network  Math.fs  README  README.m  README.md  README.md.txt  RFC.fs  RFC.fsx  RODAAI.py  Research Visualization  Summerise the project what dues it do  Www.Web4app.png.yml  __init__storage.c  action.yml  ai_studio_code.cpp  ai_studio_code.fsx  ai_studio_code.txt  bash.sh  config.py  deV bash init.sh  (+25 more)
.devcontainer/: devcontainer.json
Client/: common.sh  main.js  npm.js  style.css  vite.config.js
Docs/: .html.rst  CNAME  Server.md  Sheet.mkdn  Template.html.xtend  llms.txt
Lib/: ASX.fs  BEX.fs  Logic.fs  PSX.fs  SWX.fs
Model/: Implementation.json
Modellib/: __init__.md  init.py
Paper/: Cells.json  Lstm.pyx  Xlsl _paper.jsonl  Xlsl_paper.ipynb  template.xtend
_layouts/: Defaults.html
app/: globals.css  layout.tsx  page.tsx
cloud/: neon-pointcloud.c
components/: dataset-explorer.tsx  features.tsx  footer.tsx  hero.tsx  navigation.tsx  newsletter.tsx  overview.tsx  search.tsx  stats.tsx
dev/: command.ts  init.xtend
docs/: webdataset.rst  webdataset.vtt.mDX
example/: app.pyx
examples/: Cfs.md
in-built/: access_prompt.pyx  load_prompt.py
(+33 files in other folders)
